# models/pod_info.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PodInfo Pod Object
+//
+// swagger:model PodInfo
+type PodInfo struct {
+
+	// age of pod
+	// Example: 1m
+	Age string `json:"age,omitempty"`
+
+	// ip of pod
+	// Example: 10.244.2.61
+	IP string `json:"ip,omitempty"`
+
+	// unique name for pod
+	// Example: foobar-9zqb2
+	Name string `json:"name,omitempty"`
+
+	// node name
+	// Example: minikube-m03
+	Node string `json:"node,omitempty"`
+
+	// restart time
+	// Example: 0
+	Restarts int64 `json:"restarts,omitempty"`
+
+	// pod status
+	// Example: Running
+	Status string `json:"status,omitempty"`
+}
+
+// Validate validates this pod info
+func (m *PodInfo) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this pod info based on context it is used
+func (m *PodInfo) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PodInfo) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PodInfo) UnmarshalBinary(b []byte) error {
+	var res PodInfo
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
